--- a/Candle/candle.css
+++ b/Candle/candle.css
@@ -11,14 +11,10 @@ body {
     width: 15em;
     height: 30em;
     font-size: 7px;
-    background: linear-gradient(orange,
-            darkorange,
-            sienna,
-            saddlebrown 50%,
-            rgba(0, 0, 0, 0.6));
+    background: linear-gradient(orange, darkorange, sienna, saddlebrown 50%, rgba(0, 0, 0, 0.6));
     box-shadow:
         inset 2em -3em 5em rgba(0, 0, 0, 0.4),
-        inset -2em 0em 5em rgba(0, 0, 0, 0.4);
+        inset -2em 0 5em rgba(0, 0, 0, 0.4);
     border-radius: 10em / 4em;
     position: relative;
     display: flex;
@@ -26,7 +22,7 @@ body {
     top: 10em;
 }
 
-.candle: :before {
+.candle::before {
     content: '';
     position: absolute;
     width: inherit;
@@ -34,12 +30,7 @@ body {
     border: 0.2em solid darkorange;
     border-radius: 50%;
     box-sizing: border-box;
-    background: radial-gradient(#444,
-            orange,
-            saddlebrown,
-            sienna,
-            darkorange
-    );
+    background: radial-gradient(#444, orange, saddlebrown, sienna, darkorange);
     filter: opacity(0.7);
 }
 
@@ -48,11 +39,7 @@ body {
     width: 0.6em;
     height: 3.6em;
     top: -1.8em;
-    background: linear-gradient(
-        #111,
-        black,
-        orange 90%
-    );
+    background: linear-gradient(#111, black, orange 90%);
     border-radius: 40% 40% 0 0;
 }
 
@@ -61,7 +48,7 @@ body {
     width: 2.4em;
 }
 
-.flames: :before {
+.flames::before {
     content: '';
     position: absolute;
     width: inherit;
@@ -74,35 +61,38 @@ body {
     filter: opacity(0.7);
 }
 
-.flames: :after {
+.flames::after {
     content: '';
     position: absolute;
     width: inherit;
     height: 12em;
     top: -12em;
-    background: linear-gradient(
-        white 80%, transparent);
-        border-radius: 50% 50% 20% 20%;
-        box-shadow: 0 -0.6em 0.4em
-        darkorange;
-        animation: 
-        enlarge 5s linear infinite;
+    background: linear-gradient(white 80%, transparent);
+    border-radius: 50% 50% 20% 20%;
+    box-shadow: 0 -0.6em 0.4em darkorange;
+    animation: enlarge 5s linear infinite, move 6s linear infinite;
 }
 
 @keyframes move {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: rotate(2deg);
     }
+
     50% {
         transform: rotate(-2deg);
     }
 }
 
 @keyframes enlarge {
-    0%, 100% {
+
+    0%,
+    100% {
         height: 12em;
         top: -12em;
     }
+
     50% {
         height: 14em;
         top: -13em;
